# llvm-project

auto-host-rpc/: device.ll  main.cpp  test.c
clang/lib/AST/: ASTContext.cpp  ASTImporter.cpp  ExprConstant.cpp  ItaniumMangle.cpp  MicrosoftMangle.cpp  OpenMPClause.cpp  StmtProfile.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGDebugInfo.cpp  CGDebugInfo.h  CGDecl.cpp  CGObjCMac.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeGPU.cpp  CGOpenMPRuntimeGPU.h  CGStmtOpenMP.cpp  CodeGenModule.cpp  CodeGenTypes.cpp  ItaniumCXXABI.cpp
clang/lib/Index/: USRGeneration.cpp
clang/lib/Parse/: ParseOpenMP.cpp
clang/lib/Sema/: Sema.cpp  SemaExpr.cpp  SemaOpenMP.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTWriter.cpp
clang/test/AST/: ast-dump-amdgpu-types.c
clang/test/CodeGen/: amdgpu-buffer-rsrc-type.c
clang/test/CodeGenCXX/: amdgpu-buffer-rsrc-typeinfo.cpp
clang/test/CodeGenOpenCL/: builtins-amdgcn-make-buffer-rsrc.cl  builtins-amdgcn-raw-ptr-buffer-store.cl
clang/test/OpenMP/: globalization_byval_struct.c  target_ompx_dyn_cgroup_mem_codegen.cpp  target_teams_codegen.cpp
clang/test/SemaOpenCL/: builtins-amdgcn-raw-ptr-buffer-store-error.cl
clang/tools/clang-linker-wrapper/: ClangLinkerWrapper.cpp
clang/tools/libclang/: CIndex.cpp
llvm/: CMakeLists.txt
llvm/lib/AsmParser/: LLParser.cpp
llvm/lib/IR/: AbstractCallSite.cpp  AsmWriter.cpp  ConstantFold.cpp  Constants.cpp  (+3 more)
openmp/: CMakeLists.txt
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/plugins/common/JIT/: CMakeLists.txt  JIT.cpp  JIT.h
(+135 files in other folders)
